--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     <section class="aboutus traits" id="Traits">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 order-2 order-sm-2 order-md-1">
                     <div class="traits-rt">
-                        <img src="images/specs.svg" class="w-100" alt="about us"/>
+                        <img src="images/specs2.svg" class="w-100" alt="about us"/>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 order-1 order-sm-1 order-md-2">
                     <div class="about-box">
                         <h2 class="about-title">The Specs</h2>
                         <p class="about-content">
@@ -287,27 +287,6 @@
                     <p class="copyright m-0">
                         &copy; 2021 SurgingBulls. All rights reserved.
                     </p>
-                </div>
-                <div class="col-sm-6">
-                    <div class="mr-auto">
-                        <ul class="nav social-media">
-                            <li>
-                                <a class="social-links" href="" title="Discord">
-                                    <img src="images/social_icon1.png" alt="discord" />
-                                </a>
-                            </li>
-                            <li>
-                                <a class="social-links" href="" title="Twitter">
-                                    <img src="images/social_icon2.png" alt="twitter" />
-                                </a>
-                            </li>
-                            <li>
-                                <a class="social-links" href="" title="Telegram">
-                                    <img src="images/social_icon3.png" alt="telegram" />
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
